...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import isel.dei.pdm.puzzle.R
import isel.dei.pdm.puzzle.ui.theme.Demo8PuzzleTheme

internal const val StartScreenTag = "StartScreen"

/**
 * The start screen of the application.
 * @param onStartRequested callback to start the game.
 */
@Composable
...
